examples/neg/set1.pcl
program setaki1;

var x : integer;

begin
  x := 2.5;
end.
